--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-sm bg-light navbar-light py-4">
+    <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
         <a class="navbar-brand offset-1" href="index.html">
                 <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
         </a>
