--- a/who.html
+++ b/who.html
@@ -8,29 +8,29 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <div class="full-height">
-            <nav class="navbar navbar-expand-sm bg-light navbar-light py-4">
-                <a class="navbar-brand offset-1" href="index.html">
-                        <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
-                </a>
-                <ul class="navbar-nav mr-5 ml-auto">
-                    <li class="nav-item">
+        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
+            <a class="navbar-brand offset-1" href="index.html">
+                    <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
+            </a>
+            <ul class="navbar-nav mr-5 ml-auto">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home Page</a>
-                    </li>
-                    <li class="nav-item active">
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="who.html">Who We Are</a>
-                    </li>
-                    <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="what.html">What We Do</a>
-                    </li>
-                    <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
+                </li>
                 </ul>
-            </nav>
-            <div class="jumbotron jumbotron-fluid m-0">
+        </nav>
+        <div class="full-height">
+            <div class="jumbotron jumbotron-fluid m-0 p-1">
                 <div class="col-5 offset-7 container-image">
-                        <img src="./images/Gherkin-Gradient.jpg" class="img-fluid h-100" alt="Gherkin Building">
+                        <img src="./images/Gherkin-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Gherkin Building">
                 </div>
                 <div class="container-fluid px-0">
                     <div class="col-8 offset-1">
