Fixed padding issue

--- a/who.html
+++ b/who.html
@@ -28,7 +28,7 @@
                 </ul>
         </nav>
         <div class="full-height">
-            <div class="jumbotron jumbotron-fluid m-0 p-1">
+            <div class="jumbotron jumbotron-fluid m-0">
                 <div class="col-5 offset-7 container-image">
                         <img src="./images/Gherkin-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Gherkin Building">
                 </div>
