Fixed Padding Issue

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div class="full-height">
-            <div class="jumbotron jumbotron-fluid m-0">
+            <div class="jumbotron jumbotron-fluid navbar-adjustment m-0">
                 <div class="col-5 offset-7 container-image">
                         <img src="./images/Contact-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Contact Image">
                 </div>
