--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </li>
           </ul>
     </nav>
-    <div class="container-fluid p-0">
-      <img src="./images/Mountain1.jpg" class="img-fluid" alt="Eiger Mountain">
+    <div class="container-fluid p-0 navbar-adjustment">
+      <img src="./images/Mountain1.jpg" class="img-fluid h-25" alt="Eiger Mountain">
     </div>
-    <div class="jumbotron jumbotron-fluid m-0">
+    <div class="jumbotron jumbotron-fluid m-0 py-2">
       <div class="container">
         <h4 class="display-4">EigerSearch is a London-based financial services executive search firm.</h4>
         <h4 class="p-content"><br>We specialise in recruiting for regulatory positions across the Compliance 
