--- a/who.html
+++ b/who.html
@@ -28,14 +28,16 @@
                 </ul>
         </nav>
         <div class="full-height">
-            <div class="jumbotron jumbotron-fluid m-0">
+            <div class="jumbotron jumbotron-fluid navbar-adjustment m-0">
                 <div class="col-5 offset-7 container-image">
                         <img src="./images/Gherkin-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Gherkin Building">
                 </div>
                 <div class="container-fluid px-0">
                     <div class="col-8 offset-1">
-                        <h1 class="display-4">Operating within a crowded marketplace, our mission is straightforward; to be the most respected participant in our field.</h1>
-                        <h4 class="p-content"><br>Since 2007, EigerSearch has developed into being one of the most trusted, discreet and well-connected firms of its type.
+                        <h4 class="p-content"><br>Operating within a crowded marketplace, our mission is straightforward; 
+                            to be the most respected participant in our field.
+                            <br><br>
+                            Since 2007, EigerSearch has developed into being one of the most trusted, discreet and well-connected firms of its type.
                             <br><br>
                         Critically, our team possesses an essential core competency, that of a previous track-record. 
                         We have successfully recruited many Heads of Compliance, Money Laundering Reporting Officers and skilled Compliance specialists.
