--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </li>
           </ul>
     </nav>
-    <div class="container-fluid p-0 navbar-adjustment">
-      <img src="./images/Mountain1.jpg" class="img-fluid h-25" alt="Eiger Mountain">
+    <div class="container-fluid px-0 navbar-adjustment homepage-image">
+      <img src="./images/Mountain1.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
     </div>
     <div class="jumbotron jumbotron-fluid m-0 py-2">
       <div class="container">
