--- a/what.html
+++ b/what.html
@@ -12,26 +12,31 @@
             <a class="navbar-brand offset-1" href="index.html">
                     <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
             </a>
-            <ul class="navbar-nav mr-5 ml-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="index.html">Home Page</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="who.html">Who We Are</a>
-                </li>
-                <li class="nav-item active">
-                <a class="nav-link" href="what.html">What We Do</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse"  id="mobileNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home Page</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="who.html">Who We Are</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="what.html">What We Do</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                  </ul>
+              </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid navbar-adjustment m-0">
-            <div class="col-5 offset-7 container-image">
-                    <img src="./images/Tube-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Underground Escalators">
-            </div>
-            <div class="container-fluid px-0">
+        <div class="container-fluid px-0 navbar-adjustment homepage-image">
+            <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+        </div>
+        <div class="jumbotron jumbotron-fluid m-0 py-3">
+            <div class="container">
                 <div class="col-8 offset-1">
                     <h4 class="p-content"><br>We are very proud that our track-record allows us to represent a small and core group of clients 
                         who come from some of the world’s leading investment banks, law firms, wealth managers, asset managers, brokerages and hedge funds. 
