--- a/who.html
+++ b/who.html
@@ -8,29 +8,34 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
+        <nav class="navbar fixed-top navbar-expand-md bg-light navbar-light py-4">
             <a class="navbar-brand offset-1" href="index.html">
                     <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
             </a>
-            <ul class="navbar-nav mr-5 ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home Page</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="who.html">Who We Are</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what.html">What We Do</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-                </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse"  id="mobileNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home Page</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="who.html">Who We Are</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="what.html">What We Do</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                  </ul>
+              </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid navbar-adjustment m-0">
-            <div class="col-5 offset-7 container-image">
-                    <img src="./images/Gherkin-Gradient-Adjusted.jpg" class="img-fluid h-100" alt="Gherkin Building">
-            </div>
+        <div class="container-fluid px-0 navbar-adjustment homepage-image">
+            <img src="./images/LondonSkyline.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+        </div>
+        <div class="jumbotron jumbotron-fluid m-0 py-3">
             <div class="container-fluid px-0">
                 <div class="col-8 offset-1">
                     <h4 class="p-content"><br>Operating within a crowded marketplace, our mission is straightforward; 
