Added New Images and Footer

--- a/contact.html
+++ b/contact.html
@@ -33,26 +33,58 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/LondonAtNight.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <p class="img-attribute">
+              <span>“</span>
+              <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
+                <span>London</span>
+              </a>
+              <span>”, by </span>
+              <a href="https://flic.kr/ps/2jB2GG" target="_blank" rel="noopener">
+                <span>LWYang</span>
+              </a>
+              <span>, is licensed under </span>
+              <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" rel="noopener">
+                <span>CC BY 2.0</span>
+              </a>
+            </p>
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
-            <div class="container">
-                <div class="col-8 offset-1">
-                    <h4 class="p-content"><br>Thank you for visiting our website.
-                        <br><br>
-                        We would be delighted to provide you with further information. Please contact us at:
-                        <br><br>
-                        EigerSearch<br>
-                        4 Lombard Street<br>
-                        London<br>
-                        EC3V 9HD<br>
-                        <br><br>
-                        Tel:  +44 (0) 20 7190 2841
-                        <br><br>
-                        info@eigersearch.com</h4>
-                </div>
-            </div>
+          <div class="container">
+            <h4 class="p-content"><br>Thank you for visiting our website.
+              <br><br>
+              We would be delighted to provide you with further information. Please contact us at:
+              <br><br>
+              EigerSearch<br>
+              4 Lombard Street<br>
+              London<br>
+              EC3V 9HD<br>
+              <br><br>
+              Tel:  +44 (0) 20 7190 2841
+              <br><br>
+              info@eigersearch.com
+            </h4>
+          </div>
         </div>
+        <footer class="footer">
+          <div class="jumbotron jumbotron-fluid bg-light py-3 mb-0 mx-auto">
+            <div class="container">
+              <div class="row">
+                  <div class="col my-auto text-left">
+                    © EigerSearch Limited 2019
+                  </div>
+                  <div class="col my-auto text-center">
+                    Designed By Jonathan Englund
+                  </div>
+                  <div class="col my-auto text-right">
+                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                    <br><br>
+                    <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
