--- a/what.html
+++ b/what.html
@@ -33,20 +33,67 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <img src="./images/CanaryWharf.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
-            <div class="container">
-                <div class="col-8 offset-1">
-                    <h4 class="p-content"><br>We are very proud that our track-record allows us to represent a small and core group of clients 
-                        who come from some of the world’s leading investment banks, law firms, wealth managers, asset managers, brokerages and hedge funds. 
-                        Accordingly, we can present our candidates with significant regulatory career ideas and for our clients, 
-                        we provide extensive accessibility to some of the best Compliance and Anti-Money Laundering candidates.
-                        <br><br>
-                        We hope this brief introduction to EigerSearch has been helpful and informative and we look forward to hearing from you.</h4>
-                </div>
-            </div>
+          <div class="container">
+            <h4 class="p-content"><br>
+              Ut varius laoreet faucibus. Phasellus aliquet convallis libero, vel convallis augue pellentesque et.
+              Curabitur non efficitur metus. Integer ac purus efficitur, venenatis urna feugiat, aliquam elit. 
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
+              Proin facilisis scelerisque gravida. In ac ante eget urna sodales consequat. Nam sit amet venenatis orci.
+              Sed tempor mauris pharetra augue euismod laoreet. Nullam sodales metus at aliquam convallis. 
+              Phasellus quis sem dapibus est vulputate tristique. Etiam a ultricies velit. 
+              Cras a libero at lectus bibendum condimentum ut laoreet arcu. 
+              Quisque interdum finibus nisl, ac vulputate lorem sodales non. 
+              Duis eget dolor et nulla rutrum luctus. Etiam varius nisl nec lacus congue tempus.
+              <br><br>
+              Nulla auctor erat eu nunc mattis commodo. Nunc consectetur elit nibh, vitae hendrerit arcu efficitur et.
+              Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed dapibus tortor eget fringilla tristique. 
+              Etiam nibh mauris, finibus quis auctor non, elementum in ex. 
+              Curabitur imperdiet, enim at mattis efficitur, lectus velit auctor metus, vitae blandit ante arcu nec sapien. 
+              Quisque nec rutrum elit, sit amet molestie nisi. 
+              Sed ligula nulla, laoreet eget erat sed, tempus scelerisque magna. 
+              Cras maximus justo nec elit gravida, eu dignissim lorem luctus. 
+              Nulla ipsum ligula, mattis ac suscipit eu, imperdiet ut turpis. 
+              Etiam metus augue, dictum a maximus eget, commodo sit amet sapien. 
+              Vivamus finibus est lacus, nec volutpat sapien hendrerit eget. Aliquam erat volutpat. 
+              Mauris dolor eros, dignissim in vestibulum et, luctus ut sapien. 
+              Quisque rhoncus hendrerit sapien, sed auctor urna hendrerit sit amet. 
+              Maecenas cursus lacus erat, quis efficitur ipsum ornare sodales.
+              <br><br>
+              In a dignissim sapien, a consequat eros. Vivamus posuere sodales cursus. 
+              Nullam porta urna vitae erat ultrices, et feugiat enim cursus. Integer quis lorem sapien. 
+              Etiam pharetra eros iaculis tempus laoreet. Aliquam erat volutpat. 
+              Fusce diam erat, volutpat vitae cursus et, commodo vel metus. 
+              Pellentesque eget diam sit amet nunc porta fermentum. 
+              Vivamus velit leo, commodo ut arcu quis, pellentesque pulvinar dolor. Nullam eu lacinia mauris. 
+              Curabitur sodales nunc ipsum, quis hendrerit nulla dictum tincidunt. Nulla ut lacus elit. 
+              Quisque ultrices mattis risus, nec accumsan sem dignissim ac. 
+              Nam nunc nisi, sodales nec eros ut, faucibus efficitur erat. Suspendisse potenti.
+              <br><br>
+            </h4>
+          </div>
         </div>
+        <footer class="footer">
+          <div class="jumbotron jumbotron-fluid bg-light py-3 mb-0 mx-auto">
+            <div class="container">
+              <div class="row">
+                  <div class="col my-auto text-left">
+                    © EigerSearch Limited 2019
+                  </div>
+                  <div class="col my-auto text-center">
+                    Designed By Jonathan Englund
+                  </div>
+                  <div class="col my-auto text-right">
+                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                    <br><br>
+                    <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
