--- a/who.html
+++ b/who.html
@@ -36,26 +36,56 @@
             <img src="./images/LondonSkyline.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
-            <div class="container-fluid px-0">
-                <div class="col-8 offset-1">
-                    <h4 class="p-content"><br>Operating within a crowded marketplace, our mission is straightforward; 
-                        to be the most respected participant in our field.
-                        <br><br>
-                        Since 2007, EigerSearch has developed into being one of the most trusted, discreet and well-connected firms of its type.
-                        <br><br>
-                    Critically, our team possesses an essential core competency, that of a previous track-record. 
-                    We have successfully recruited many Heads of Compliance, Money Laundering Reporting Officers and skilled Compliance specialists.
-                    <br><br>
-                    Our co-founder, Malcolm Hill, is one of the City’s most experienced Compliance recruitment specialists. 
-                    His regulatory recruitment expertise began in 1998 and he demonstrates an extensive network of contacts which reflects this.
-                    <br><br>
-                    As a boutique and a niche business, EigerSearch offers a mix of bespoke recruitment and consultancy solutions which leverage 
-                    our exceptional sector knowledge and our first-rate accessibility.
-                    <br><br>
-                    In all that we do, we strive to demonstrate quality. It is through our quality that we focus on achieving our differentiation.</h4>
-                </div>
-            </div>
+          <div class="container">
+            <h4 class="p-content"><br>
+              Morbi sit amet nisl pulvinar, sodales ligula varius, varius eros. 
+              Mauris vitae dui varius, faucibus mi pellentesque, finibus velit. 
+              Cras ac nibh facilisis, efficitur enim id, tristique urna. 
+              Mauris lorem tellus, finibus quis commodo at, congue non odio. In hac habitasse platea dictumst. 
+              Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+              Nunc auctor nunc tortor, sit amet dapibus nulla rutrum nec. Pellentesque suscipit vestibulum laoreet. 
+              Phasellus consequat pharetra finibus. Integer cursus vel nunc nec accumsan. 
+              Quisque sit amet turpis eget dolor viverra tristique. Ut eget leo eu orci malesuada pharetra. 
+              Quisque ornare tempus est luctus venenatis.
+              <br><br>
+              Etiam sit amet risus sit amet lacus mattis vulputate vel tincidunt est. 
+              Donec feugiat tortor mauris, at hendrerit eros auctor sed. Mauris luctus sagittis turpis. 
+              Praesent massa metus, vehicula a placerat id, tempus vel tortor. Nulla varius lorem at diam placerat consectetur. 
+              Fusce in augue eleifend, faucibus mi nec, volutpat metus. Etiam blandit enim a varius lacinia. 
+              Nam id purus aliquam, accumsan massa sit amet, ullamcorper diam. Suspendisse ac lectus arcu. 
+              Suspendisse suscipit libero a commodo suscipit. Sed faucibus nec erat eget semper.
+              <br><br>
+              Nam viverra pellentesque sodales. Nunc finibus turpis velit, a gravida sem sodales et. 
+              Donec non aliquet nisi. Vestibulum metus augue, feugiat eget vehicula sed, rutrum sed metus. 
+              Suspendisse potenti. Cras eu dignissim nunc, a egestas turpis. Suspendisse vitae turpis arcu. 
+              Cras nulla risus, volutpat eu accumsan vel, efficitur pellentesque odio. Donec a ornare felis, id tincidunt ligula. 
+              Aliquam erat volutpat. Praesent risus metus, ultrices sed lorem nec, interdum tincidunt libero. 
+              Etiam nec mi sed velit accumsan consequat. Donec pharetra porttitor bibendum. 
+              Nullam consectetur porta turpis, eget faucibus nisl consectetur a. 
+              Nulla vehicula dolor elit, eu semper ante suscipit non.
+              <br><br>
+            </h4>
+          </div>
         </div>
+        <footer class="footer">
+          <div class="jumbotron jumbotron-fluid bg-light py-3 mb-0 mx-auto">
+            <div class="container">
+              <div class="row">
+                  <div class="col my-auto text-left">
+                    © EigerSearch Limited 2019
+                  </div>
+                  <div class="col my-auto text-center">
+                    Designed By Jonathan Englund
+                  </div>
+                  <div class="col my-auto text-right">
+                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                    <br><br>
+                    <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
