Added the Company Number and Address to the Footer

--- a/what.html
+++ b/what.html
@@ -81,6 +81,11 @@
               <div class="row">
                   <div class="col my-auto text-left">
                     © EigerSearch Limited 2019
+                    <br>
+                    <p class="company-num">
+                      EigerSearch Limited is registered in England and Wales (number 6267095).<br>
+                      Our Registered office is 11 Catherine Place, London SW1E 6DX.
+                    </p>
                   </div>
                   <div class="col my-auto text-center">
                     Designed By Jonathan Englund
