--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="jumbotron jumbotron-fluid bg-light py-3 mb-0 mx-auto">
+      <div class="jumbotron jumbotron-fluid bg-light py-1 mb-0 mx-auto">
         <div class="container">
           <div class="row">
               <div class="col my-auto text-left">
@@ -74,14 +74,18 @@
                   Our Registered office is 11 Catherine Place, London SW1E 6DX.
                 </p>
               </div>
-              <div class="col my-auto text-center">
-                Designed By Jonathan Englund
-              </div>
               <div class="col my-auto text-right">
                 <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                <br><br>
+                <br>
                 <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
-              </div>
+              </div> 
+          </div>
+          <div class="row">
+            <div class="col my-auto text-center">
+              <p class="creator">
+                  Website By Englund Designs
+              </p>
+            </div>
           </div>
         </div>
       </div>
