--- a/contact.html
+++ b/contact.html
@@ -34,20 +34,6 @@
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
             <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
-            <p class="img-attribute">
-              <span>“</span>
-              <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
-                <span>London</span>
-              </a>
-              <span>”, by </span>
-              <a href="https://flic.kr/ps/2jB2GG" target="_blank" rel="noopener">
-                <span>LWYang</span>
-              </a>
-              <span>, is licensed under </span>
-              <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" rel="noopener">
-                <span>CC BY 2.0</span>
-              </a>
-            </p>
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
@@ -66,9 +52,23 @@
               <br><br>
             </h4>
           </div>
+          <p class="img-attribute">
+              <span>“</span>
+              <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
+                <span>London</span>
+              </a>
+              <span>”, by </span>
+              <a href="https://flic.kr/ps/2jB2GG" target="_blank" rel="noopener">
+                <span>LWYang</span>
+              </a>
+              <span>, is licensed under </span>
+              <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" rel="noopener">
+                <span>CC BY 2.0</span>
+              </a>
+            </p>
         </div>
         <footer class="footer">
-          <div class="jumbotron jumbotron-fluid bg-light py-3 mb-0 mx-auto">
+          <div class="jumbotron jumbotron-fluid bg-light py-1 mb-0 mx-auto">
             <div class="container">
               <div class="row">
                   <div class="col my-auto text-left">
@@ -79,13 +79,17 @@
                       Our Registered office is 11 Catherine Place, London SW1E 6DX.
                     </p>
                   </div>
-                  <div class="col my-auto text-center">
-                    Designed By Jonathan Englund
-                  </div>
                   <div class="col my-auto text-right">
                     <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                    <br><br>
+                    <br>
                     <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col my-auto text-center">
+                    <p class="creator">
+                        Website By Englund Designs
+                    </p>
                   </div>
               </div>
             </div>
