Added Supplied text to all pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,9 @@
         <title>Contact Us</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Formed in 2007, EigerSearch Limited is a London based financial services Executive Search firm. Our specialist focus is Compliance."/>
+        <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
+        <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
@@ -21,13 +24,13 @@
                       <a class="nav-link" href="index.html">Home Page</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="who.html">Who We Are</a>
+                      <a class="nav-link" href="who-we-are.html">Who We Are</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="what.html">What We Do</a>
+                      <a class="nav-link" href="what-we-do.html">What We Do</a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link" href="contact.html">Contact Us</a>
+                      <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                   </ul>
               </div>
@@ -36,23 +39,23 @@
             <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
-          <div class="container">
-            <h4 class="p-content"><br>Thank you for visiting our website.
+          <div class="container relative">
+            <p class="p-content">Thank you for visiting our website.
               <br><br>
               We would be delighted to provide you with further information. Please contact us at:
               <br><br>
               EigerSearch<br>
               4 Lombard Street<br>
               London<br>
-              EC3V 9HD<br>
+              EC3V 9HD
               <br><br>
-              Tel:  +44 (0) 20 7190 2841
+              Tel:  +44 (0) 20 7190 2841 &nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="mailto:info@eigersearch.com">info@eigersearch.com</a>
               <br><br>
-              info@eigersearch.com
+              EigerSearch is a company Registered in England and Wales.  Company number is 6267095.
               <br><br>
-            </h4>
-          </div>
-          <p class="img-attribute">
+            </p>
+            <p class="img-attribute">
               <span>“</span>
               <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
                 <span>London</span>
@@ -66,31 +69,25 @@
                 <span>CC BY 2.0</span>
               </a>
             </p>
+          </div>
         </div>
         <footer class="footer">
-          <div class="jumbotron jumbotron-fluid bg-light py-1 mb-0 mx-auto">
+          <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
             <div class="container">
-              <div class="row">
+              <div class="row pt-3">
                   <div class="col my-auto text-left">
                     © EigerSearch Limited 2019
-                    <br>
-                    <p class="company-num">
-                      EigerSearch Limited is registered in England and Wales (number 6267095).<br>
-                      Our Registered office is 11 Catherine Place, London SW1E 6DX.
-                    </p>
                   </div>
                   <div class="col my-auto text-right">
                     <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                    <br>
-                    <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
-                  </div>
+                  </div> 
               </div>
               <div class="row">
-                  <div class="col my-auto text-center">
-                    <p class="creator">
-                        Website By Englund Designs
-                    </p>
-                  </div>
+                <div class="col my-auto text-center">
+                  <p class="creator">
+                      Website By Englund Designs
+                  </p>
+                </div>
               </div>
             </div>
           </div>
