--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Eiger Search</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Formed in 2007, EigerSearch Limited is a London based financial services Executive Search firm. Our specialist focus is Compliance."/>
+    <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
+    <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
@@ -21,13 +24,13 @@
                 <a class="nav-link" href="index.html">Home Page</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="who.html">Who We Are</a>
+                <a class="nav-link" href="who-we-are.html">Who We Are</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="what.html">What We Do</a>
+                <a class="nav-link" href="what-we-do.html">What We Do</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
         </div>
@@ -37,47 +40,36 @@
     </div>
     <div class="jumbotron jumbotron-fluid m-0 py-3">
       <div class="container">
-        <h4 class="display-4">EigerSearch is a London-based financial services executive search firm.</h4>
-        <h4 class="p-content"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis placerat odio.
-        Nunc eu sollicitudin nunc. Mauris molestie justo ex, et mattis felis tincidunt eu. Vivamus posuere laoreet feugiat.
-        Etiam venenatis velit velit, ut dignissim orci pharetra eget. Ut consectetur nibh iaculis, varius libero at, auctor massa.
-        Pellentesque aliquam magna at consequat pulvinar. Suspendisse sit amet condimentum neque.
-        Mauris at metus eget odio rutrum dictum at eu sapien. 
-        Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque quis efficitur mi.
+        <p class="p-content">EigerSearch was formed in 2007.  
+          Our focus is the provision of combined regulatory consulting and human capital solutions. 
+          We are a London-based firm and have worked with financial services clients to provide specialist advice and human capital to minimise their regulatory risks.
         <br><br>
-        Ut quis ex dui. Ut cursus urna quis blandit vulputate. Etiam purus sem, lobortis vitae dictum in, condimentum vel mi.
-        Suspendisse sodales nunc fringilla felis lobortis, luctus rhoncus ligula auctor. 
-        Etiam porta elit nec mi pulvinar fringilla. Phasellus rutrum ante arcu, vitae congue nunc efficitur et. 
-        Donec consectetur ante vestibulum, tempus sapien eget, vestibulum lorem. Maecenas vel rhoncus justo. 
-        Sed id volutpat est. Fusce a ipsum ac eros dapibus luctus. Vestibulum euismod in velit ut dapibus. 
-        Aliquam aliquet sollicitudin mi eget placerat. Etiam lacinia turpis sit amet mollis mattis. 
-        Vivamus nisl neque, iaculis eu lectus non, imperdiet facilisis tellus. 
-        Pellentesque vel metus pulvinar, cursus quam vel, pharetra quam.
+        Our clients leverage our regulatory technical expertise which dates from 1989 and our regulatory executive search experience from 1998.  
         <br><br>
-        Nulla vel congue ex. Vestibulum commodo finibus nisi, eget pulvinar risus.
-        Donec pulvinar hendrerit arcu, eu gravida ante tincidunt eget. Suspendisse tempus turpis placerat nisl ornare aliquam.
-        Mauris ut malesuada tortor. Sed vehicula pretium lectus ut condimentum.
-        Ut volutpat fermentum ex, eget luctus sapien placerat et.
+        Our target market includes global investment banks, asset managers, private banks, brokerages and consultancies.  
+        As a provider of executive search services, we have successfully placed at global, regional and local levels, numerous Heads of Compliance, 
+        Heads of Financial Crime and key senior management and team members. Our regulatory experience includes investment banking, markets, 
+        asset management and wealth management businesses.
         <br><br>
-        </h4>
+          <ul>
+            <li>We are a niche force in compliance recruitment and consulting</li>
+            <li>Our key differentiator is our unique combination of compliance executive search and technical 
+                compliance expertise together with an approach tailored to the specific needs of each client </li>
+            <li>We deliver a broad range of compliance resourcing and consulting solutions to global firms</li>
+            <li>In contrast to what are normally separate service providers, we are a one stop solutions business and have an alliance of partners and service providers</li>
+          </ul>
+        </p>
       </div>
     </div>
     <footer class="footer">
-      <div class="jumbotron jumbotron-fluid bg-light py-1 mb-0 mx-auto">
+      <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
         <div class="container">
-          <div class="row">
+          <div class="row pt-3">
               <div class="col my-auto text-left">
                 © EigerSearch Limited 2019
-                <br>
-                <p class="company-num">
-                  EigerSearch Limited is registered in England and Wales (number 6267095).<br>
-                  Our Registered office is 11 Catherine Place, London SW1E 6DX.
-                </p>
               </div>
               <div class="col my-auto text-right">
                 <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                <br>
-                <a href="downloads/second_statement" download="Second Statement" target="_blank">Second Statement</a>
               </div> 
           </div>
           <div class="row">
